--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -1,3 +1,8 @@
-/* Welcome to Compass. Use this file to define print styles.
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /> */
+@font-face {
+  font-family: Bikinis;
+  src: local("Bikinis"), url(/fonts/Bikinis.ttf);
+}
+@font-face {
+  font-family: Rampung;
+  src: local("Rampung"), url(/fonts/Rampung.ttf);
+}
